@@ -1,4 +1,4 @@
+#include "../../c++/include/sqlrelay/sqlrclient.h"
 #include <EXTERN.h>
 #include <perl.h>
 #include <XSUB.h>
-#include "../../c++/include/sqlrelay/sqlrclient.h"
