@@ -74,6 +74,8 @@
 	Fixed lurking memory bug in api where column buffers weren't getting
 		created if dontGetColumnInfo() was called, but the longdatatype
 		member was getting referenced anyway.
+	def and def_lob's are properly initialized now in oracle8 connection
+	api uses rudiments' file class for cache files now
 
 0.32 -	affectedRows and totalRows were returning 0 instead of -1 for databases
 		that don't know that value, now they return -1
